--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -61,7 +61,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/answers_progress"
+        android:id="@+id/tv_answers_progress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/progress_answers"
@@ -77,7 +77,7 @@
         android:layout_height="wrap_content"
         android:max="100"
         android:secondaryProgressTint="@color/full_green"
-        app:layout_constraintTop_toBottomOf="@id/answers_progress"
+        app:layout_constraintTop_toBottomOf="@id/tv_answers_progress"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/tv_option_2"/>
