--- a/app/src/main/res/layout/fragment_game_finished.xml
+++ b/app/src/main/res/layout/fragment_game_finished.xml
@@ -29,7 +29,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/tv_required_answers"
-            android:src="@drawable/ic_smile_emoji"/>
+            android:src="@drawable/ic_smile_emoji"
+            app:isWinnerEmoji="@{gameResult.winner}"
+            />
 
         <TextView
             android:id="@+id/tv_required_answers"
@@ -37,24 +39,26 @@
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:layout_margin="16dp"
-            android:text="@{gameResult.gameSetting.minCountOfRightAnswersString}"
+            app:requiredAnswers="@{gameResult.gameSetting.minCountOfRightAnswers}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/tv_score_answers"
-            app:layout_constraintVertical_chainStyle="packed"/>
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:text="@string/minimal_right_answers"/>
 
         <TextView
             android:id="@+id/tv_score_answers"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@{gameResult.countOfRightAnswersString}"
+            app:scoreAnswers="@{gameResult.countOfRightAnswers}"
             android:textSize="18sp"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/tv_required_answers"
             app:layout_constraintStart_toStartOf="@id/tv_required_answers"
             app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
-            app:layout_constraintBottom_toTopOf="@id/tv_required_percentage"/>
+            app:layout_constraintBottom_toTopOf="@id/tv_required_percentage"
+            tools:text="@string/your_score"/>
 
         <TextView
             android:id="@+id/tv_required_percentage"
@@ -62,23 +66,26 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:textSize="18sp"
-            android:text="@{gameResult.gameSetting.minPercentOfRightAnswersString}"
+            app:requiredPercent="@{gameResult.gameSetting.minPercentOfRightAnswers}"
             app:layout_constraintTop_toBottomOf="@id/tv_score_answers"
             app:layout_constraintStart_toStartOf="@id/tv_required_answers"
             app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
-            app:layout_constraintBottom_toTopOf="@id/tv_score_percentage"/>
+            app:layout_constraintBottom_toTopOf="@id/tv_score_percentage"
+            tools:text="@string/minimal_percent_of_answers"/>
 
         <TextView
             android:id="@+id/tv_score_percentage"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/right_answers_percent"
+            app:scorePercentage="@{gameResult}"
             android:textSize="18sp"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/tv_required_percentage"
             app:layout_constraintStart_toStartOf="@id/tv_required_answers"
             app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
-            app:layout_constraintBottom_toTopOf="@id/button_try_again"/>
+            app:layout_constraintBottom_toTopOf="@id/button_try_again"
+            tools:text="@string/right_answers_percent"/>
 
         <Button
             android:id="@+id/button_try_again"
